alignment fixes

--- a/web/assets/picluster-iframe.css
+++ b/web/assets/picluster-iframe.css
@@ -284,7 +284,7 @@ fieldset {
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
+  display: block;
 }
 
 #terminal_modal {
